fixing jump and blinking problem

--- a/app/assets/stylesheets/select2_customizations.scss
+++ b/app/assets/stylesheets/select2_customizations.scss
@@ -85,50 +85,52 @@
       }
     }
 
-    .select2-results__option[data-custom-group="true"] {
+      
 
-      .select2-results__group {
-        cursor: pointer;
-        padding-left: 30px;
-        position: relative;
-
-
-        &::before {
-          position: absolute;
-          top: 0;
-          left: 0;
-          margin: 7px 0px 0px 12px;
-          font-family: "Font Awesome 5 Free";
-          content: "\f0c8";
-          font-weight: 400;
-        }
-
-        &:hover {
-          background: $color-alto;
-        }
-      }
-
-      &[data-toogle="all"] {
+    &.custom-group{
+      .select2-results__option[role="group"] {
 
         .select2-results__group {
-          background: $color-concrete;
+          cursor: pointer;
+          padding-left: 30px;
+          position: relative;
 
           &::before {
-            content: "\f14a";
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin: 7px 0px 0px 12px;
+            font-family: "Font Awesome 5 Free";
+            content: "\f0c8";
             font-weight: 400;
+          }
+
+          &:hover {
+            background: $color-alto;
+          }
+        }
+
+        &[data-toogle="all"] {
+
+          .select2-results__group {
+            background: $color-concrete;
+
+            &::before {
+              content: "\f14a";
+              font-weight: 400;
+            }
+          }
+        }
+
+        .select2-results__option[role="treeitem"] {
+          padding-left: 45px;
+
+          &::before {
+            left: 15px;
           }
         }
       }
-
-      .select2-results__option[role="treeitem"] {
-        padding-left: 45px;
-
-        &::before {
-          left: 15px;
-        }
-      }
     }
-
   }
 }
 
